To test AI, go into pom.xml and change the operating system setting to your own.